[gd_scene load_steps=2 format=3 uid="uid://8lqnkm8c6ogh"]

[ext_resource type="Script" uid="uid://buq64nk60vb40" path="res://scripts/battle/queue_element.gd" id="1_qnqr4"]

[node name="QueueElement" type="ColorRect"]
custom_minimum_size = Vector2(82, 0)
color = Color(0.835294, 0, 0, 1)
script = ExtResource("1_qnqr4")

[node name="Body" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 87.0
expand_mode = 1

[connection signal="mouse_entered" from="Body" to="." method="_on_body_mouse_entered"]
[connection signal="mouse_exited" from="Body" to="." method="_on_body_mouse_exited"]
